# macgl_test

./: .gitignore  CMakeLists.txt
include/: textfile.h
shader/: shader.frag  shader.vert
src/: main.cpp
